--- a/Vocab_ReadingsATHKstatsAndStudies.Rmd
+++ b/Vocab_ReadingsATHKstatsAndStudies.Rmd
@@ -1,8 +1,11 @@
 ---
-title: "Vocab, readings: Alex's ATHK Stats and Studies lectures and tutorials"
-date: "lectures starting 24 Apr, 2018. This document may be edited as the lectures proceed."
+title: "Vocab, readings: Week 7 lectures on Stats and Studies, and Week 8 tutorial"
+date: "lectures starting 7 Apr, 2020. This document may be updated as the lectures proceed."
 output: html_document
 ---
+
+
+[Khan Academy](https://www.khanacademy.org/math/probability/scatterplots-a1/creating-interpreting-scatterplots/v/correlation-and-causality) on correlation and causality.
 
 ## Important Readings
 
