--- a/outline.Rmd
+++ b/outline.Rmd
@@ -7,8 +7,9 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-Week 7: Stats and studies: Correlation and causation <!--statsAndStudies PPT-->
 * Intro `r statsStudies=5` video
+
+Week 7: Stats and studies: Correlation and causation <!--statsAndStudies PPT-->
 
 <!-- Correlation and causation video -->
 <!-- Confound or nuisance variable? video -->
@@ -26,12 +27,8 @@ Week 7: Stats and studies: Correlation and causation <!--statsAndStudies PPT-->
 * Three causal models
   * X causes Y, Y causes X, a third variable causes both
 * Causal model can be at any level of detail
-* Is there a third factor?
-  * Relationship between pirates and high average temperature is confounded by time. 
 
 <!--Slide #45-->
-Lectures 2 and 3 and 4
-
 * Explanatory, Outcome, and Nuisance variables
   * Recall IV and DV. Bruce slide:
 ```{r, echo=FALSE, out.width = "220px"}
@@ -51,25 +48,31 @@ knitr::include_graphics("imagesForRmd/BruceConfoundsSlide.png")
 ```{r, echo=FALSE, out.width = "220px"}
 knitr::include_graphics("imagesForRmd/BruceRandomizedControlledExperiments.png")
 ```
-    * Bruce slide:
-```{r, echo=FALSE, out.width = "220px"}
-knitr::include_graphics("imagesForRmd/BruceSignificPvalueDefintn.png")
-```    
-
-* Post hoc ergo propter hoc (After this therefore because of this) fallacy
-* Contingency tables, dichotomous variables and correlation
-
-* Recognizing correlational studies in the news
-* Statistical adjustment - [controlling for]((https://alexholcombe.github.io/teachingATHK/readings/controllingForVsControl.html)) confounds
-  * 
-* Statistics won't cut it
-* Epidemiology confounds
 * Randomisation and control group
   * Bruce slide
 ```{r, echo=FALSE, out.width = "200px"}
 knitr::include_graphics("imagesForRmd/bruceSlide147randomAssignment.png")
 ```
 
+* Time as a third variable
+  * Relationship between pirates and high average temperature is confounded by time. 
+* Time: Post hoc ergo propter hoc (After this therefore because of this) fallacy
+
+  * Bruce slide:
+```{r, echo=FALSE, out.width = "220px"}
+knitr::include_graphics("imagesForRmd/BruceSignificPvalueDefintn.png")
+```    
+
+* Dichotomous correlation
+  * dichotomous variables and correlation
+  * Contingency tables
+  * Later you will see the link to arguments and logic
+
+* Recognizing correlational studies in the news
+* Statistical adjustment - [controlling for]((https://alexholcombe.github.io/teachingATHK/readings/controllingForVsControl.html)) confounds
+  * 
+* Statistics won't cut it
+* Epidemiology confounds
 * Expectancy effect
 * Experimentation effect
 
@@ -215,7 +218,11 @@ Week 10 - `r wk10=0` <!-- "confirmationBias" Keynote -->
 
 
 * Who to believe <!-- whoToBelieve Keynote file -->
-  * Telling fact from fiction in the news https://theconversation.com/can-you-tell-fact-from-fiction-in-the-news-most-students-cant-102580
+  * [Telling fact from fiction in the news](https://theconversation.com/can-you-tell-fact-from-fiction-in-the-news-most-students-cant-102580)
+  * Ensure your mouth and throat are always moist. Stomach acid can kill coronavirus. It's just the flu. China created COVID-19 as a biological weapon. At least 60 per cent of the population needs to be exposed to build up "necessary resistance" to the virus. From [this](https://www.smh.com.au/business/companies/the-other-viral-problem-in-the-covid-19-pandemic-online-misinformation-20200318-p54bd3.html) 
+  * [Only about 30% of Australians](https://www.smh.com.au/business/companies/the-other-viral-problem-in-the-covid-19-pandemic-online-misinformation-20200318-p54bd3.html) checked with other sources of info before sharing something
+    * OK but there are other signals of credibility
+    * And background knowledge
   * Argument from authority
     * Bias: Incentive, and circumstantial ad hominem
     * Track record
